force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/SVMXA360__CONF_TimelineConfigDetail__c.object-meta.xml
<CustomObject>
    <description>This object stores configuration details for the timeline configuration.</description>
    <label>Timeline Configuration Detail</label>
    <nameField>
        <displayFormat>ATCD-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timeline Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>