force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__BackgroundColor__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__BackgroundColor__c</fullName>
    <description>A hexadecimal value that indicates the background color of a record band on the timeline.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>A hexadecimal value that indicates the background color of a record band on the timeline.</inlineHelpText>
    <label>Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>