force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__DisplayFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__DisplayFieldAPIName__c</fullName>
    <description>The API name of the field to use as the display text when plotting the record on the timeline.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the field to use as the display text when plotting the record on the timeline.</inlineHelpText>
    <label>Display Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>