force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__EndDateFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__EndDateFieldAPIName__c</fullName>
    <description>The API name of the end date field to use as the date to plot a record on the timeline. When provided, the record is displayed as a band rather than a plot point.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the end date field to use as the date to plot a record on the timeline. When provided, the record is displayed as a band rather than a plot point.</inlineHelpText>
    <label>End Date Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>