force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__IconName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__IconName__c</fullName>
    <description>The name of the SLDS icon to display for a record on the timeline.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the SLDS icon to display for a record on the timeline.</inlineHelpText>
    <label>Icon Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>