force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ObjectAPIName__c</fullName>
    <description>Stores the object name mapped for this timeline configuration detail record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Stores the object name mapped for this timeline configuration detail record.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>