force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__QualifyingCriteria__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__QualifyingCriteria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to an expression to display only those records that meet the expression criteria.</description>
    <inlineHelpText>Lookup to an expression to display only those records that meet the expression criteria.</inlineHelpText>
    <label>Qualifying Criteria</label>
    <referenceTo>SVMXA360__CONF_Expression__c</referenceTo>
    <relationshipLabel>Timeline Configuration Details</relationshipLabel>
    <relationshipName>Timeline_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>