force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__ShowMatchingOnLoad__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ShowMatchingOnLoad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show matching records on default load</label>
    <type>Checkbox</type>
</CustomField>