force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__SourceFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__SourceFieldAPIName__c</fullName>
    <description>The API name of the data field used to identify the record.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the data field used to identify the record.</inlineHelpText>
    <label>Source Field API Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>