force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__StartDateFieldAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__StartDateFieldAPIName__c</fullName>
    <description>The API name of the date field to use as the date to plot a record on the timeline.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The API name of the date field to use as the date to plot a record on the timeline.</inlineHelpText>
    <label>Start Date Field</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>