force-app/main/default/objects/SVMXA360__CONF_TimelineConfigDetail__c/fields/SVMXA360__TimelineConfigId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__TimelineConfigId__c</fullName>
    <description>The master timeline configuration for which the details are represented.</description>
    <inlineHelpText>The master timeline configuration for which the details are represented.</inlineHelpText>
    <label>Timeline Configuration</label>
    <referenceTo>SVMXA360__CONF_TimelineConfig__c</referenceTo>
    <relationshipLabel>Timeline Configuration Details</relationshipLabel>
    <relationshipName>Timeline_Configuration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>